--- a/index.html
+++ b/index.html
@@ -6,13 +6,34 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="container"
-    </div>
+
+    <div id="container">
     <header>
       <img src="http://www.free-icons-download.net/images/google-gmail-logo-icon-24576.png" alt="">
       <span>GMAIL</span>
     </header>
     <hr>
+
+    <main>
+      <input type="text" name="" value="" placeholder="cerca">
+      <button type="button" name="button">CLICK</button>
+      <div class="titolo"> You Have <span class="cerchio"> 30 </span>unread</div>
+
+      <hr>
+
+    <div class="emailcontainer">
+
+      <div class="email">&star;Oggetto email</div>
+      <div class="email2">&star;Oggetto email</div>
+      <div class="email">&star;Oggetto email</div>
+      <div class="email">&star;Oggetto email</div>
+
+    </div>
+    <hr>
+
+
+    </main>
+</div>
 
   </body>
 </html>
