--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
       <div class="email">&star;Oggetto email</div>
 
     </div>
-    <hr>
-
-
     </main>
+    <hr>
+    <footer>
+     GMAIL BY <span class="spanfooter">Daniele Fontana</span>
+    </footer>
 </div>
 
   </body>
